--- a/src/components/bottomNav/BottomNav.scss
+++ b/src/components/bottomNav/BottomNav.scss
@@ -10,7 +10,7 @@
   align-items: center;
   border-radius: var(--borderRadius);
   background-color: var(--primary);
-  transition: bottom 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .menu-btn {
   position: absolute;
